test/library/packages/LinearAlgebra/correctness/dependencies/testCholeskyRealError.good
testCholeskyRealError.chpl:7: error: halt reached - Matrix passed must be symmetric positive definite
